# Diploma

./: .gitignore  CMakeLists.txt  main.cpp
Docs/: Новиков_ВКР.docx  Новиков_ВКР2.docx
include/: calculations.h  matrix.h
models/: lol2.mdl  lol23.mdl  lol3.mdl  model.mdl  model2.mdl  model3.mdl  model4.mdl  model41.mdl  model5.mdl  sample1.mdl  sample11.mdl  sample12.mdl  sample2.mdl  sample3.mdl
python/: application.py  calculations.py  config.ini  config.py  copyable.py  data_editor.py  diagrams.py  force.py  globals.py  inspector.py  interface.py  main.py  math_model.py  model.py  node.py  requirements.txt  serializable.py  tab.py  testcube.py  window.py
python/Entities/: diagrams.py  distributed_force.py  element.py  fixed.py  force.py  load.py  momentum.py  node.py  object.py  pinned.py  prop.py  roller.py
python/Geometry/: Arrow.py  Circle.py  Line.py  Matrix.py  Point.py  QBezier.py  Vector.py
python/Geometry/Primitives/: Arrow.py  Circle.py  Entity.py  Line.py  QBezier.py  Text.py
python/data/: Channel.csv  IBeam.csv  data.py
python/interface/: interface.xml
python/snippets/: demo.py  diagram.py  snippet1.py  snippet2.py  snippet3.py  snippet4.py  snippet5.py  work_dia.py
python/tests/: test_test.py
src/: CMakeLists.txt  calculations.cpp  matrix.cpp
